--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,17 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "RanKit"
+excerpt: "An easy, step by step, interactive ranking tool. <br/><img src='/images/rankit.png'>"
 collection: portfolio
 ---
+[RanKit](http://rankit.wpi.edu) is an interactive prototype ranking tool for building your own rankings based on
+a small set of input preferences. Rnkit offers 3 types of interaction: build a sublist of items, group items into categories, or 
+compare pairs of items to give the system a sample of your preferences. Then a ranking over all the items in the dataset is automatically generated.
+You can try out the tool using a number of sample data sets including colleges, movies, and US states.
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+The Rankit System was developed and evaluated by a team of undergrad students at WPI for their Major Qualifying Project 
+under the supervision of Caitlin Kuhlman.
+
+Our 2018 CIKM [demo paper](https://dl.acm.org/authorize?N673720) describes the system in detail and provides case studies for personalized ranking.
+
+Our 2019 SIGCHI [paper](https://dl.acm.org/authorize?N673729) provides and in-depth evaluation of different ranking interaction modes using a crowdsourced user study 
+and a theoretical analysis of the tradeoffs between user effort required and rank quality. 
